#190 #191 Address PR #205 review comments
- JsonFileRepository.applyRawInitializerSilently — let `configure KSP` and any
  constructor/linkage failure escape; runCatching defeated the validation pass.
- ReactivePropertyDelegate.writeReactivePropertyBackingField — guard against silent
  writes on closed entities to preserve the ReactiveEntityBase closed-state contract.
- JsonFileRepositoryRawInitLoadTest — replace `--add-opens` JVM-arg inspection with
  a behavioral seed+reload assertion that would surface InaccessibleObjectException
  if any reflection path lingered.
- KspUtils.isReactivePropertyDelegate — handle null qualifiedName so type-parameter
  reactive properties (`var value: V by reactiveProperty(...)`) keep flowing through
  the generator and validator.
- LirpAccessorValidationProcessor + RawInitializerProcessor + ReactivePropertyAccessorProcessor
  — skip abstract entities in lockstep; abstract entities cannot be instantiated by
  fromRow / deserialize, so any generated accessor would be unreachable and the
  validator would emit a false-positive error.
- KspUtils.renderKsType — shared recursive renderer preserving generic type
  arguments and nullability. RawInitializerProcessor.renderTypeRef now reuses it so
  the generated `value as X` casts carry full `X<A, B>` info instead of the raw type.
- SqlRepository.loadEntities — cache the raw initializer per concrete entity class
  so polymorphic `fromRow` results get the correct silent setters per row.
- LirpAccessorValidationProcessorTest — pin the failure path to the
  reactive-property branch by asserting on the entity name and `LirpReactivePropertyAccessor`.
- README — drop the standalone breaking-change section; add an Installation
  subsection at the top of Quick Start with Maven and Gradle snippets and `lirp-sql`
  / `lirp-fx` marked as optional add-ons.